--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
-    <title>Ferway - Trello</title>
+    <title>Next Trello</title>
   </head>
 
   <body>
